--- a/README
+++ b/README
@@ -2,6 +2,7 @@ CBLocation
 ==========
 
 o Introduction
+o Sample App
 o More information
 o License
 
@@ -11,6 +12,10 @@ CBLocation is a set of location utilities ported to Objective-C from
 a set of Javascript functions:
 
 http://www.movable-type.co.uk/scripts/latlong-gridref.html
+
+Sample App
+----------
+The CBLocationTest project is a single view app that shows how to use CBLocation
 
 More information
 ----------------
